--- a/src/entities/InputVolume/styles.scss
+++ b/src/entities/InputVolume/styles.scss
@@ -1,6 +1,8 @@
 .volume {
+    position: relative;
     width: 200px;
     position: relative;
     display: block;
     margin: 10px auto;
+    z-index: 2;
 }
