--- a/src/modules/SoundBlockListModule/styles.scss
+++ b/src/modules/SoundBlockListModule/styles.scss
@@ -1,10 +1,12 @@
 .sounds-block {
+    position: relative;
     width: 100%;
     max-width: 960px;
     margin: 0 auto;
     display: flex;
     justify-content: center;
     align-items: center;
+    z-index: 3;
 }
 
 @media (max-width: 768px) {
