--- a/src/pages/Home/styles.scss
+++ b/src/pages/Home/styles.scss
@@ -3,6 +3,10 @@
     top: 0;
     width: 100vw;
     height: 100vh;
+    background-image: url('../../shared/assets/images/summer-bg.jpg');
+    background-position: top;
+    background-repeat: no-repeat;
+    background-size: cover;
 
     &::before {
         content: '';
@@ -11,16 +15,13 @@
         bottom:0;
         left: 0;
         right: 0;
-        background-image: url('@public/images/summer-bg.jpg');
-        background-position: top;
-        background-repeat: no-repeat;
-        background-size: cover;
-        filter: blur(8px);
-        z-index: -1;
+        opacity: 0.7;
+        background-color: white;
     }
 }
 
 .title {
+    position: relative;
     font-size: 3rem;
     letter-spacing: 0.1rem;
     text-align: center;
